# pace24-ocm

./: .gitignore  LICENSE.txt  Makefile  README.md  all  all.sh  todo.md
graphs/bruteforce/: 1.gr
graphs/debug/: 1.gr  2.gr  3.gr  4.gr  5.gr  speedtest1.gr
graphs/tiny/: rule1.gr  test1.gr  test2.gr
results/: greedy_insertion_order_comparison.csv  results_05_04_2024.out  results_08_04_2024_max10s.out  results_09_04_2024_max10s.out  results_exact.out
src/: CMakeLists.txt  Makefile  main.cpp
src/solver/: common.cpp  common.h  solver.cpp  solver.h  solver1.cpp  solver1.h  solver1a.cpp  solver1a.h  solver1b.cpp  solver1b.h  solver2.cpp  solver2.h  solver3.cpp  solver3.h  solver4.cpp  solver4.h  solver_bruteforce.cpp  solver_bruteforce.h
